[gd_scene load_steps=3 format=3 uid="uid://3u4cjoe6l84c"]

[ext_resource type="PackedScene" uid="uid://0p07nc8e2mwo" path="res://editor/int_editor.tscn" id="1_3s2x6"]
[ext_resource type="Script" path="res://editor/vector3i_editor.gd" id="1_vvj74"]

[node name="Vector3iEditor" type="GridContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
columns = 3
script = ExtResource("1_vvj74")

[node name="IntEditor" parent="." instance=ExtResource("1_3s2x6")]
layout_mode = 2

[node name="IntEditor2" parent="." instance=ExtResource("1_3s2x6")]
layout_mode = 2

[node name="IntEditor3" parent="." instance=ExtResource("1_3s2x6")]
layout_mode = 2
